--- a/config/env.config
+++ b/config/env.config
@@ -1,35 +1,35 @@
-export SYNC_DIRECTORIES=True
-export VCENTER_HOSTNAME=172.29.0.31
-export VCENTER_USERNAME=administrator@vsphere.local
-export VCENTER_PASSWORD='VMware@123!'
+export SYNC_DIRECTORIES=False
+export VCENTER_HOSTNAME=rp-sm-n1-vc02.pse.lab
+export VCENTER_USERNAME=administrator@wld.lab
+export VCENTER_PASSWORD='VMware123!VMware123!'
 export K8S_SUP_CLUSTER='airgapped'
-export CL_DATASTORE='airgap-airgapped-vsan01'
+export CL_DATASTORE='wld1-vsan01'
 export CL_DLVM='local-dlvm'
 export CL_VKS='local-vks'
 export K8S_SUPERVISOR_IP=172.22.0.2
 
 export NGC_API_KEY=nvapi-
-export BOOTSTRAP_REGISTRY="ag2-bootstrap-harbor.set.lab"
-export BOOTSTRAP_REGISTRY_IP=172.29.0.253
+export BOOTSTRAP_REGISTRY="rp-sm-n-harbor.pse.lab"
+export BOOTSTRAP_REGISTRY_IP=172.30.132.49
 export BOOTSTRAP_REGISTRY_USERNAME="admin"
-export BOOTSTRAP_REGISTRY_PASSWORD='VMware@123!'
+export BOOTSTRAP_REGISTRY_PASSWORD='VMware123!VMware123!'
 export BOOTSTRAP_SUPSVC_REPO="sup-services"
 export BOOTSTRAP_NVIDIA_REPO="nvidia"
 
 # Values Can be the same as BOOTSTRAP_REGISTRY if using a single Enterprise registry
-export PLATFORM_REGISTRY="ag-registry.set.lab"
-export PLATFORM_REGISTRY_IP=172.22.0.3
+export PLATFORM_REGISTRY="rp-sm-n-harbor.pse.lab"
+export PLATFORM_REGISTRY_IP=172.30.132.49
 export PLATFORM_REGISTRY_USERNAME="admin"
-export PLATFORM_REGISTRY_PASSWORD='Harbor12345'
+export PLATFORM_REGISTRY_PASSWORD='VMware123!VMware123!'
 export PLATFORM_SUPSVC_REPO="sup-services"
-export PLATFORM_TNZPKG_REPO="tanzu-packages"
+export PLATFORM_VCFPKG_REPO="vcf-packages"
 
 export REGISTRY_CERT_FOLDER="./certificates"
 export DOWNLOAD_VKR_OVA="./kubernetes-releases-ova"
 export DOWNLOAD_DLVM_OVA="./dlvm-releases-ova"
 export DOWNLOAD_DIR_YML="./supervisor-services-yml"
 export DOWNLOAD_DIR_TAR="./supervisor-services-tar"
-export DOWNLOAD_DIR_BIN="./tanzu-common-files-bin"
+export DOWNLOAD_DIR_BIN="./vcf-common-files-bin"
 export BASTION_RESOURCES_DIR="./resources"
 export BASTION_REPO_DIR="/opt/data/ubuntu"
 export ADMIN_RESOURCES_DIR="/data"
